Fixed splash scroll on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -84,7 +84,7 @@ button:hover{
     margin:0;
     max-width: 100vw !important;
     width:100vw !important;
-    height:100vh !important;
+    height:100% !important;
     z-index:5000;
 }
 #splash-body{
